# huggingface_3d_nifti_trainer

./: .gitignore  README.md  data_presets.py  image_utils.py  pyproject.toml  train.py
configs/: example.json  example_with_clip.json
notebooks/: 2_train.ipynb  3_valid_one_model.ipynb
