[project]
name = "huggingface-3d-nifti-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grad-cam>=1.5.5",
    "monai>=1.5.1",
    "nibabel>=5.3.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "transformers[torch]>=4.57.1",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.22.3",
]
